--- a/J2.md
+++ b/J2.md
@@ -7,3 +7,4 @@ Basic type = int a; double b;
 ```
 Object = String s
 ```
+2. <p> (a) Static method:- it is a declaration for classes which allows data and function to be accessible within the class without having to instantiate an object instance of that class as an object. <br> (b) When we are executing the main method of a class we're not instantiating an instance of the class as an object and then calling main. We are essentially calling the main directly or statically without an instance.
