--- a/J2.md
+++ b/J2.md
@@ -9,4 +9,4 @@ Object = String s
 ```
 2. <p> (a) Static method:- it is a declaration for classes which allows data and function to be accessible within the class without having to instantiate an object instance of that class as an object. <br> (b) When we are executing the main method of a class we're not instantiating an instance of the class as an object and then calling main. We are essentially calling the main directly or statically without an instance.
 
-3.<p> Problem 1 = Wrong, because it is using the `==` operator to comapre two strings, which checks for reference equality rather than value equality. The  string choice is created as a new String object so it does not refer to the same memory location as the string literal "A". <p> Program 2 = correct becuase it compares the value of the string choice with the string literal "A".
+3.<p> Problem 1 = Wrong, because it is using the `==` operator to comapre two strings, which checks for reference equality rather than value equality. The  string choice is created as a new String object so it does not refer to the same memory location as the string literal "A". <br> Program 2 = correct becuase it compares the value of the string choice with the string literal "A".
