--- a/J2.md
+++ b/J2.md
@@ -13,4 +13,37 @@ Object = String s
 
 4. No the season does not change at all because when the change_season(season) is called there is no reassaigining of the variable(or it's address, A100) from ```Winter``` to ```Spring```. This is because the method only modifies a local copy of the reference to the string.
 
-5. 
+5. Output is x = 0 and y = 0 because the constructor parameter shadow the instance variable x and y so when we call x=x and y = y it doesn't affect our instance variable which makes it retain its initial value of 0.
+
+6. Private(visibility modifiers) it is used as a declaration on methods and object data to limit how programmers can use the object through information hiding. 
+
+7.(Method Overloading) - the constructors have different types/ arguments so it mainly looks at the constructor calls to determine which constructor to use.
+
+8. Option 4 is correct because it is declaring public x and y values that can be used to change the values of x and y because in the Point class the values are private. This is essential because since the x and y feilds in point class are private,so you cannot access or modify directly from the CustomPoint class.
+
+9. Output = super(0,0) will not complile because you cannot call a superclass constructor after another statement.
+
+10.The constructor call will set up the variables in the parent class and then changes can be made, so it will compile this time.
+
+11. Option 2 is correct because the use of getX() and getY() is accessing the correct values of x and y to return the sum.
+
+12. Protected modifier is a compromise between struct separation of interface from implemntation and a wild west all-fields are public approach. It basically enables subclasses to access certain members while keeping them hidden from unrelated classes. By doing so we maintain encapsulation and provide a controlled way to expose functionality for inheritance.
+
+13.
+```java
+public FormulaOne(int n, Driver d, String make) {
+     super(n,d);
+     this.make = make;
+}
+
+public String toString() {
+     return super.toString() +""+ make;
+}
+```
+14.
+
+
+
+
+
+   
