--- a/J2.md
+++ b/J2.md
@@ -40,7 +40,11 @@ public String toString() {
      return super.toString() +""+ make;
 }
 ```
-14.
+14.edsvmd
+
+15. Neither because ``` addSponsor``` is not public instead it is protected
+
+16. 
 
 
 
