--- a/J2.md
+++ b/J2.md
@@ -44,7 +44,7 @@ public String toString() {
 
 15. Neither because ``` addSponsor``` is not public instead it is protected
 
-16. ![UML Diagram](IMG_2761.heic)
+16. ![UML Diagram](https://github.com/kidusze/Worksheet-J2/blob/main/IMG_2761.heic) 
 
 
 
