--- a/J2.md
+++ b/J2.md
@@ -43,8 +43,7 @@ public String toString() {
 
 14. Neither because ``` addSponsor``` is not public instead it is protected
 
-15.
-    ![UML Diagram](https://github.com/kidusze/Worksheet-J2/blob/main/IMG_2761.heic) 
+15.  ![UML Diagram](https://github.com/kidusze/Worksheet-J2/blob/main/IMG_2761.heic) 
 
 
 
